[package]
name = "par-stream"
description = "Asynchronous parallel streams analogous to rayon"
version = "0.10.2"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
categories = ["asynchronous"]
documentation = "https://docs.rs/par-stream/"
repository = "https://github.com/jerry73204/par-stream.git"
homepage = "https://github.com/jerry73204/par-stream"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
features = ["doc-only"]
no-default-features = true

[dependencies]
futures = "0.3.30"
num_cpus = "1.16.0"
async-std = { version = "1.12.0", features = ["unstable"], optional = true }
tokio = { version = "1.38.1", features = ["sync", "macros", "time"] }
pin-project = "1.1.5"
by_address = "1.2.1"
flume = "0.11"
once_cell = "1.19.0"
dashmap = "6.0.1"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
educe = { version = "0.6.0", default-features = false, features = ["Debug", "PartialEq", "Eq", "PartialOrd", "Ord"] }

[dev-dependencies]
tokio = { version = "1.38.1", features = ["sync", "macros", "rt-multi-thread", "time"] }
rand = "0.8.5"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
itertools = "0.13"
concurrent-slice = "0.1.0"
clap = { version = "4", features = ["derive"] }

[features]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio/rt-multi-thread"]
# runtime-smol = ["smol"]
doc-only = ["async-std"]
